Improve the logic of flash purchase product list and reservation product list